# bidhive-ml-api

./: .gitignore  docker-compose.yaml  pyproject.toml  tox.ini
.github/workflows/: python-app.yml
app/: __init__.py  celery.py  config.py  database.py  logger.py  main.py  oauth2.py  utils.py
app/model/: __init__.py  uploaded_file.py
app/router/: auth.py  documents.py  search.py
app/schema/: __init__.py  auth.py  documents.py  s3_connect.py  search.py
app/service/: __init__.py  documents.py  embeddings.py  parsing.py
app/tasks/: __init__.py  common.py
migrations/: env.py
migrations/versions/: 291888c93aa4_initial_migration.py  aae14209a362_title_customer_value_path.py  f808275e92ac_add_processed_field.py
tasks/: __init__.py  clean_db.py  shell.py  shell_init.py
tests/: conftest.py  test_auth.py  test_documents.py  test_embeddings.py  test_parsing.py  test_search.py
tests/test_files/: Expression of Interest Form - Tier 3 Weight Management Service.docx
