[tool.poetry]
name = "ML API Server"
version = "0.1.0"
description = "ML service for Bidhive"
authors = ["Danil Dvorchuk <dvorchyk.d.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.65.2"
requests = "^2.25.1"
uvicorn = "^0.15.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pydantic = "^1.10.4"
python-dotenv = "^0.18.0"
python-multipart = "^0.0.5"
bcrypt = "^3.2.0"
email-validator = "^1.2.1"
anyio = "^3.6.1"
setuptools = "^67.3.2"
boto3 = "^1.26.75"
moto = {extras = ["s3"], version = "^4.1.3"}

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
pytest = "^7.1.3"
ipython = "^8.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
